struture of page

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,2 +1,12 @@
 
-<h1 class="text-10xl font-bold underline">  Hello world!</h1>
+<div class="search h-[3rem] mx-8 my-5 bg-gray-500 rounded-xl">
+    <input type="text">
+    <button>Find</button>
+</div>
+
+<div class="flex flex-row h-[32rem]">
+    <div class="aside basis-1/7 ms-8 rounded-xl bg-cyan-500">01</div>
+    <div class="main basis-6/7 mx-8 rounded-xl">
+        <app-dashboard-component/>
+    </div>
+</div>
