--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -1,21 +1,29 @@
 <div class="columns-2">
     <div class="content-1 aspect-1/2 flex flex-col">
         <div class="basis-1/7 columns-2 mb-2">
-            <div class="content rounded-xl bg-pink-500">01</div>
-            <div class="content rounded-xl bg-pink-500">02</div>
+            <div class="content rounded-xl bg-blue-50">
+                <app-mini-card [myMiniCard]="card1()"/>
+            </div>
+            <div class="content rounded-xl bg-blue-50">
+                <app-mini-card [myMiniCard]="card2()"/>
+            </div>
         </div>
-        <div class="content basis-4/7 mb-2 rounded-xl bg-blue-500">02</div>
-        <div class="content basis-2/7 rounded-xl bg-gray-500">03</div>
+        <div class="content basis-4/7 mb-2 rounded-xl bg-blue-50">02</div>
+        <div class="content basis-2/7 rounded-xl bg-blue-50">03</div>
     </div>
     <div class="content-2 aspect-1/2 flex flex-col">
         <div class="basis-1/7 columns-2 mb-2">
-            <div class="content rounded-xl bg-gray-500">04</div>
-            <div class="content rounded-xl bg-gray-500">05</div>
+            <div class="content rounded-xl bg-blue-50">
+                <app-mini-card [myMiniCard]="card3()"/>
+            </div>
+            <div class="content rounded-xl bg-blue-50">
+                <app-mini-card [myMiniCard]="card4()"/>
+            </div>
         </div>
         <div class="basis-3/7 mb-2 columns-2">
-            <div class="content rounded-xl rounded-xl bg-green-500">04</div>
-            <div class="content rounded-xl rounded-xl bg-green-500">05</div>
+            <div class="content rounded-xl rounded-xl bg-blue-50">04</div>
+            <div class="content rounded-xl rounded-xl bg-blue-50">05</div>
         </div>
-        <div class="content basis-3/7 rounded-xl bg-red-500">03</div>
+        <div class="content basis-3/7 rounded-xl bg-blue-50">03</div>
     </div>
 </div>
