--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -21,7 +21,9 @@
             </div>
         </div>
         <div class="basis-3/7 mb-2 columns-2">
-            <div class="content rounded-xl rounded-xl bg-blue-50">04</div>
+            <div class="content rounded-xl rounded-xl bg-blue-50">
+                <app-card-med-component/>
+            </div>
             <div class="content rounded-xl rounded-xl bg-blue-50">05</div>
         </div>
         <div class="content basis-3/7 rounded-xl bg-blue-50">03</div>
