--- a/frontend/src/app/components/card-med-component/card-med-component.html
+++ b/frontend/src/app/components/card-med-component/card-med-component.html
@@ -1,7 +1,4 @@
 <div class="w-[100%] h-[100%] flex flex-col py-2 px-3">
     <h2 class="text-xs">Earning transaction for this month</h2>
-    <div class="flex flex-col bg-blue-500">
-        <h2 class="w-[100%] text-xs">{{ myMedCard().title }}</h2>
-        <p class="w-[100%] text-lg">Ar {{ myMedCard().amount }}</p>
-    </div>
+    <app-transaction-item-component/>
 </div>
