--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -8,8 +8,15 @@
                 <app-mini-card [myMiniCard]="card2()"/>
             </div>
         </div>
-        <div class="content basis-4/7 mb-2 rounded-xl bg-blue-50">02</div>
-        <div class="content basis-2/7 rounded-xl bg-blue-50">03</div>
+        <div class="content basis-4/7 mb-2 rounded-xl bg-blue-50 overflow-hidden">
+            <img class="w[100%] h-[100%]" src="assets/imgs/stat.jpg" alt="">
+        </div>
+        <div class="p-3 content basis-2/7 rounded-xl bg-blue-50">
+            <h2>Add a new transaction</h2>
+            <p>Did you earn or spent money today ?</p>
+            <p>Here you can add you latest transaction to help you manage it</p>
+            <button class="mt-3 rounded-[2em] px-3 py-1 bg-blue-500">New transaction</button>
+        </div>
     </div>
     <div class="content-2 aspect-1/2 flex flex-col">
         <div class="basis-1/7 columns-2 mb-2">
@@ -21,11 +28,15 @@
             </div>
         </div>
         <div class="basis-3/7 mb-2 columns-2">
-            <div class="content rounded-xl rounded-xl bg-blue-50">
-                <app-card-med-component/>
+            <div class="content rounded-xl rounded-xl bg-blue-50 p-2">
+                <img class="w[100%] h-[100%]" src="assets/imgs/circle2.png" alt="">
             </div>
-            <div class="content rounded-xl rounded-xl bg-blue-50">05</div>
+            <div class="content rounded-xl rounded-xl bg-blue-50 p-2">
+                <img class="w[100%] h-[100%]" src="assets/imgs/circle1.png" alt="">
+            </div>
         </div>
-        <div class="content basis-3/7 rounded-xl bg-blue-50">03</div>
+        <div class="content basis-3/7 rounded-xl bg-blue-50">
+            <app-card-med-component/>
+        </div>
     </div>
 </div>
