--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,7 +1,9 @@
 
-<div class="search h-[3rem] mx-8 my-5 bg-gray-500 rounded-xl">
-    <input type="text">
-    <button>Find</button>
+<div class="search h-[3rem] mx-8 flex justify-end items-center my-5 rounded-xl">
+    <div class="me-5 bg-white px-3 rounded-3xl shadow-md">
+        <input type="text" class="me-3 py-2 rounded-3xl" placeholder="Search...">
+        <i class="fa-solid fa-magnifying-glass"></i>
+    </div>
 </div>
 
 <div class="flex flex-row h-[32rem]">
