--- a/frontend/src/app/app.scss
+++ b/frontend/src/app/app.scss
@@ -10,4 +10,12 @@
 }
 
 .search {
+    input {
+        all: unset;
+        padding: .5em;
+    }
+
+    i:hover {
+        cursor: pointer;
+    }
 }
