--- a/frontend/src/app/components/transaction-item-component/transaction-item-component.html
+++ b/frontend/src/app/components/transaction-item-component/transaction-item-component.html
@@ -1,6 +1,6 @@
 <div class="container h-[180px] gap-1 rounded p-2 overflow-y-scroll">
     <table class="w-[100%]">
-        <thead class="text-xs">
+        <thead class="text-sm">
             <th>
                 Amount
             </th>
@@ -15,78 +15,11 @@
         </thead>
 
         <tbody>
-            <tr class="text-xs">
-                <td>10000</td>
+            <tr class="text-sm">
+                <td>Ar 10000</td>
                 <td>Salary</td>
                 <td>12-01-2025</td>
             </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-
-            <tr class="text-xs">
-                <td>10000</td>
-                <td>Salary</td>
-                <td>12-01-2025</td>
-            </tr>
-            
         </tbody>
     </table>
 </div>
