--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -1,41 +1,41 @@
 <div class="columns-2">
     <div class="content-1 aspect-1/2 flex flex-col">
         <div class="basis-1/7 columns-2 mb-2">
-            <div class="content rounded-xl bg-blue-50">
+            <div class="content shadow-md rounded-xl">
                 <app-mini-card [myMiniCard]="card1()"/>
             </div>
-            <div class="content rounded-xl bg-blue-50">
+            <div class="content shadow-md rounded-xl">
                 <app-mini-card [myMiniCard]="card2()"/>
             </div>
         </div>
-        <div class="content basis-4/7 mb-2 rounded-xl bg-blue-50 overflow-hidden">
-            <img class="w[100%] h-[100%]" src="assets/imgs/stat.jpg" alt="">
+        <div class="content basis-4/7 shadow-md mb-2 rounded-xl overflow-hidden">
+            <img class="w-[100%] h-[100%]" src="assets/imgs/stat.jpg" alt="">
         </div>
-        <div class="p-3 content basis-2/7 rounded-xl bg-blue-50">
+        <div class="p-3 content basis-2/7 rounded-xl shadow-md">
             <h2>Add a new transaction</h2>
             <p>Did you earn or spent money today ?</p>
             <p>Here you can add you latest transaction to help you manage it</p>
-            <button class="mt-3 rounded-[2em] px-3 py-1 bg-blue-500">New transaction</button>
+            <button class="mt-3 rounded-[2em] px-3 py-2 bg-blue-500">New transaction</button>
         </div>
     </div>
     <div class="content-2 aspect-1/2 flex flex-col">
         <div class="basis-1/7 columns-2 mb-2">
-            <div class="content rounded-xl bg-blue-50">
+            <div class="content shadow-md rounded-xl">
                 <app-mini-card [myMiniCard]="card3()"/>
             </div>
-            <div class="content rounded-xl bg-blue-50">
+            <div class="content shadow-md rounded-xl">
                 <app-mini-card [myMiniCard]="card4()"/>
             </div>
         </div>
         <div class="basis-3/7 mb-2 columns-2">
-            <div class="content rounded-xl rounded-xl bg-blue-50 p-2">
+            <div class="content rounded-xl shadow-mdrounded-xl p-2">
                 <img class="w[100%] h-[100%]" src="assets/imgs/circle2.png" alt="">
             </div>
-            <div class="content rounded-xl rounded-xl bg-blue-50 p-2">
+            <div class="content rounded-xl shadow-mdrounded-xl p-2">
                 <img class="w[100%] h-[100%]" src="assets/imgs/circle1.png" alt="">
             </div>
         </div>
-        <div class="content basis-3/7 rounded-xl bg-blue-50">
+        <div class="content basis-3/7 shadow-md rounded-xl">
             <app-card-med-component/>
         </div>
     </div>
