feat: add graph component

--- a/frontend/src/app/components/transaction-item-component/transaction-item-component.html
+++ b/frontend/src/app/components/transaction-item-component/transaction-item-component.html
@@ -15,8 +15,8 @@
         </thead>
 
         <tbody>
-            <tr class="text-sm">
-                <td>Ar 10000</td>
+            <tr class="border-zinc-400 text-sm border-b-1">
+                <td class="p-2">Ar 10000</td>
                 <td>Salary</td>
                 <td>12-01-2025</td>
             </tr>
