--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -8,8 +8,8 @@
                 <app-mini-card [myMiniCard]="card2()"/>
             </div>
         </div>
-        <div class="content basis-4/7 shadow-md mb-2 rounded-xl overflow-hidden">
-            <img class="w-[100%] h-[100%]" src="assets/imgs/stat.jpg" alt="">
+        <div class="p-2 content basis-4/7 shadow-md mb-2 rounded-xl overflow-hidden">
+            <app-graph-component></app-graph-component>
         </div>
         <div class="p-3 content basis-2/7 rounded-xl shadow-md">
             <h2>Add a new transaction</h2>
