--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -9,13 +9,13 @@
             </div>
         </div>
         <div class="p-2 content basis-4/7 shadow-md mb-2 rounded-xl overflow-hidden">
-            <app-graph-component></app-graph-component>
+            <app-graph-component/>
         </div>
         <div class="p-3 content basis-2/7 rounded-xl shadow-md">
-            <h2>Add a new transaction</h2>
-            <p>Did you earn or spent money today ?</p>
-            <p>Here you can add you latest transaction to help you manage it</p>
-            <button class="mt-3 rounded-[2em] px-3 py-2 bg-blue-500">New transaction</button>
+            <h2 class="font-bold mb-2">Add a new transaction</h2>
+            <p class="text-sm">Did you earn or spent money today ?</p>
+            <p class="text-sm">Here you can add you latest transaction to help you manage it.</p>
+            <button class="mt-2 rounded-[2em] px-4 py-2 bg-blue-500 text-white hover:bg-blue-700 transition duration-700 ease-in-out">New transaction</button>
         </div>
     </div>
     <div class="content-2 aspect-1/2 flex flex-col">
@@ -28,14 +28,15 @@
             </div>
         </div>
         <div class="basis-3/7 mb-2 columns-2">
-            <div class="content rounded-xl shadow-mdrounded-xl p-2">
-                <img class="w[100%] h-[100%]" src="assets/imgs/circle2.png" alt="">
+            <div class="content rounded-xl shadow-md rounded-xl p-2 bg-blue-500 overflow-hidden">
+                <h2>test</h2>
+                <app-pie-component/>
             </div>
-            <div class="content rounded-xl shadow-mdrounded-xl p-2">
-                <img class="w[100%] h-[100%]" src="assets/imgs/circle1.png" alt="">
+            <div class="content rounded-xl shadow-md rounded-xl p-2 overflow-hidden">
+                <app-pie-component/>
             </div>
         </div>
-        <div class="content basis-3/7 shadow-md rounded-xl">
+        <div class="content basis-3/7 shadow-md rounded-xl overflow-hidden">
             <app-card-med-component/>
         </div>
     </div>
