--- a/frontend/src/app/components/pie-component/pie-component.scss
+++ b/frontend/src/app/components/pie-component/pie-component.scss
@@ -6,6 +6,6 @@
   }
   
 canvas {
-    width: 100% !important;
-    height: 100% !important;
+    // width: 100% !important;
+    // height: 100% !important;
 }
