--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -16,7 +16,7 @@
                 </li>
             </a>
 
-            <a href="#" class=" px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
+            <a href="#" class=" px-3 py-2 bg-zinc-100 hover:bg-zinc-50 w-[100%] inline-block">
                 <li class="flex items-center">
                     <i class="fa-solid fa-chart-line me-3"></i>
                     <span>Statistics</span>
