--- a/frontend/src/app/components/transaction-item-component/transaction-item-component.html
+++ b/frontend/src/app/components/transaction-item-component/transaction-item-component.html
@@ -1,25 +1,52 @@
-<div class="container h-[180px] gap-1 rounded p-2 overflow-y-scroll">
-    <table class="w-[100%]">
-        <thead class="text-sm">
-            <th>
+<div class="container gap-1 rounded">
+    <table class="w-[100%] h-auto">
+        <thead class="text-xs text-zinc-700 border-b-1 border-zinc-400">
+            <th class="font-light">
                 Amount
             </th>
 
-            <th>
+            <th class="font-light">
                 Reason
             </th>
 
-            <th>
+            <th class="font-light">
                 Date
             </th>
         </thead>
 
-        <tbody>
-            <tr class="border-zinc-400 text-sm border-b-1">
+        <tbody class="overflow-y-scroll">
+            <tr class="border-zinc-400 text-green-700 text-xs border-b-1">
+                <td class="p-2">Ar 10000</td>
+                <td>Salary</td>
+                <td>12-01-2025</td>
+            </tr>
+
+            <tr class="border-zinc-400 text-red-600 text-xs border-b-1">
+                <td class="p-2">Ar 10000</td>
+                <td>Salary</td>
+                <td>12-01-2025</td>
+            </tr>
+
+            <tr class="border-zinc-400 text-green-700 text-xs border-b-1">
+                <td class="p-2">Ar 10000</td>
+                <td>Salary</td>
+                <td>12-01-2025</td>
+            </tr>
+
+            <tr class="text-green-700 border-zinc-400 text-xs border-b-1">
+                <td class="p-2">Ar 10000</td>
+                <td>Salary</td>
+                <td>12-01-2025</td>
+            </tr>
+
+            <tr class="border-zinc-400 text-red-600 text-xs border-b-1">
                 <td class="p-2">Ar 10000</td>
                 <td>Salary</td>
                 <td>12-01-2025</td>
             </tr>
         </tbody>
     </table>
+
+    <a href="#" class="inline-block mt-3 px-2 text-blue-500 border-b-2 border-blue-50">See all...</a>
+
 </div>
