--- a/frontend/src/app/components/card-med-component/card-med-component.html
+++ b/frontend/src/app/components/card-med-component/card-med-component.html
@@ -1,4 +1,3 @@
-<div class="w-[100%] h-[100%] flex flex-col py-2 px-3">
-    <h2 class="text-xs">Earning transaction for this month</h2>
+<div class="flex flex-col overflow-hidden">
     <app-transaction-item-component/>
 </div>
