--- a/frontend/src/app/components/pie-component/pie-component.html
+++ b/frontend/src/app/components/pie-component/pie-component.html
@@ -1,7 +1,7 @@
-<div class="chart-container">
+<div class="relative">
     <canvas baseChart
-            [data]="chartData"
-            [options]="chartOptions"
-            [type]="'pie'">
+        [data]="chartData"
+        [options]="chartOptions"
+        [type]="'doughnut'">
     </canvas>
 </div>
