--- a/frontend/src/app/components/graph-component/graph-component.scss
+++ b/frontend/src/app/components/graph-component/graph-component.scss
@@ -1,11 +1,4 @@
-:host {
-    display: block;
-    width: 100%;
-    height: 100%;
-  }
-  
+:host,
 canvas {
-    display: block;
-    width: 100% !important;
-    height: 100% !important;
+  display: block;
 }
