--- a/frontend/src/app/components/pie-component/pie-component.scss
+++ b/frontend/src/app/components/pie-component/pie-component.scss
@@ -1,11 +1,17 @@
-.chart-container {
-    position: relative;
+:hover {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%
+}
+
+canvas {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
-    margin: 0 auto;
-  }
-  
-canvas {
-    // width: 100% !important;
-    // height: 100% !important;
 }
