--- a/frontend/src/app/components/transaction-item-component/transaction-item-component.html
+++ b/frontend/src/app/components/transaction-item-component/transaction-item-component.html
@@ -1,7 +1,7 @@
 <div class="container gap-1 rounded">
     <table class="w-[100%] h-auto">
-        <thead class="text-xs text-zinc-700 border-b-1 border-zinc-400">
-            <th class="font-light">
+        <thead class="text-xs text-zinc-700 border-b-1 border-zinc-300 p-2">
+            <th class="font-light py-2">
                 Amount
             </th>
 
@@ -15,31 +15,31 @@
         </thead>
 
         <tbody class="overflow-y-scroll">
-            <tr class="border-zinc-400 text-green-700 text-xs border-b-1">
+            <tr class="border-zinc-300 text-xs border-b-1">
                 <td class="p-2">Ar 10000</td>
                 <td>Salary</td>
                 <td>12-01-2025</td>
             </tr>
 
-            <tr class="border-zinc-400 text-red-600 text-xs border-b-1">
+            <tr class="border-zinc-300 text-xs border-b-1">
                 <td class="p-2">Ar 10000</td>
                 <td>Salary</td>
                 <td>12-01-2025</td>
             </tr>
 
-            <tr class="border-zinc-400 text-green-700 text-xs border-b-1">
+            <tr class="border-zinc-300 text-xs border-b-1">
                 <td class="p-2">Ar 10000</td>
                 <td>Salary</td>
                 <td>12-01-2025</td>
             </tr>
 
-            <tr class="text-green-700 border-zinc-400 text-xs border-b-1">
+            <tr class="border-zinc-300 text-xs border-b-1">
                 <td class="p-2">Ar 10000</td>
                 <td>Salary</td>
                 <td>12-01-2025</td>
             </tr>
 
-            <tr class="border-zinc-400 text-red-600 text-xs border-b-1">
+            <tr class="border-zinc-300 text-xs border-b-1">
                 <td class="p-2">Ar 10000</td>
                 <td>Salary</td>
                 <td>12-01-2025</td>
