--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -8,9 +8,9 @@
                 <app-mini-card [myMiniCard]="card2()"/>
             </div>
         </div>
-        <div class="p-2 content basis-4/7 flex flex-col justify-center shadow-md mb-2 rounded-xl overflow-hidden">
+        <div class="py-2 px-5 content basis-4/7 flex flex-col justify-center shadow-md mb-2 rounded-xl overflow-hidden">
             <h2 class="font-bold mb-2">Add a new transaction</h2>
-            <div class="w-[100%] overflow-y-scroll bg-blue-500">
+            <div class="w-[100%] overflow-y-hidden bg-blue-50">
                 <app-pie-component/>
             </div>
         </div>
