--- a/frontend/src/app/components/pie-component/pie-component.html
+++ b/frontend/src/app/components/pie-component/pie-component.html
@@ -1,4 +1,4 @@
-<div class="relative">
+<div class="relative flex justify-center items-center">
     <canvas baseChart
         [data]="chartData"
         [options]="chartOptions"
