--- a/frontend/src/app/components/pie-component/pie-component.scss
+++ b/frontend/src/app/components/pie-component/pie-component.scss
@@ -1,17 +1,14 @@
 :hover {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%
 }
 
 canvas {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+}
+
+div {
     width: 100%;
     height: 100%;
 }
