--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -18,7 +18,7 @@
             <h2 class="font-bold mb-2">Add a new transaction</h2>
             <p class="text-sm">Did you earn or spent money today ?</p>
             <p class="text-sm">Here you can add you latest transaction to help you manage it.</p>
-            <button class="mt-2 rounded-[2em] px-4 py-2 bg-blue-500 text-white hover:bg-blue-700 transition duration-700 ease-in-out">New transaction</button>
+            <button class="mt-2 rounded-[2em] px-4 py-1 bg-blue-500 text-white hover:bg-blue-700 transition duration-700 ease-in-out">Add...</button>
         </div>
     </div>
     <div class="content-2 aspect-1/2 flex flex-col">
@@ -35,8 +35,12 @@
                 <app-graph-component/>
             </div>
         </div>
-        <div class="content basis-4/7 p-2 shadow-md rounded-xl overflow-hidden">
-            <app-card-med-component/>
+        <div class="content basis-4/7 py-2 px-5 shadow-md rounded-xl overflow-hidden">
+            <h2 class="font-bold mb-2">Transaction History</h2>
+            <div class="my-card overflow-scroll bg-blue-50">
+                <app-card-med-component/>
+            </div>
+            <button class="mt-2 rounded-[2em] px-4 py-1 border-1 border-blue-500 text-blue-500 hover:text-white hover:bg-blue-500 transition duration-500 ease-in-out">See all...</button>
         </div>
     </div>
 </div>
