feat: stats component

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -39,6 +39,7 @@
         </div>
     </div>
     <div class="main basis-6/7 mx-8 rounded-xl">
-        <app-dashboard-component/>
+        <!-- <app-dashboard-component/> -->
+        <app-stats-component/>
     </div>
 </div>
