--- a/frontend/src/app/components/stats-component/stats-component.html
+++ b/frontend/src/app/components/stats-component/stats-component.html
@@ -1,1 +1,90 @@
-<p>stats-component works!</p>
+<div class="flex flex-col h-[32rem] gap-3">
+    <div class="flex h-[50%] gap-3">
+        <div class="basis-4/6 rounded-xl p-5 shadow-md bg-white">
+            <app-graph-component/>
+        </div>
+        <div class="basis-2/6 p-5 rounded-xl shadow-md bg-pink-500">
+            b
+        </div>
+    </div>
+    
+    <div class="rounded-xl h-[50%] bg-white overflow-y-scroll shadow-md p-5 bg-blue-500">
+        <table class="w-[100%]">
+            <thead class="text-xs text-zinc-700 border-b-1 border-zinc-300 p-2">
+                <th class="font-light py-2">
+                    Amount
+                </th>
+        
+                <th class="font-light">
+                    Reason
+                </th>
+        
+                <th class="font-light">
+                    Date
+                </th>
+            </thead>
+        
+            <tbody class="overflow-y-scroll">
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+        
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+        
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+        
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+        
+                <tr class="border-zinc-300 text-xs border-b-1">
+                    <td class="p-2">Ar 10000</td>
+                    <td>Salary</td>
+                    <td>12-01-2025</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
