feat: add routes

--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -39,7 +39,6 @@
         </div>
     </div>
     <div class="main basis-6/7 mx-8 rounded-xl">
-        <!-- <app-dashboard-component/> -->
-        <app-stats-component/>
+        <router-outlet></router-outlet>
     </div>
 </div>
