update: add link

--- a/frontend/src/app/components/stats-component/stats-component.html
+++ b/frontend/src/app/components/stats-component/stats-component.html
@@ -3,8 +3,8 @@
         <div class="basis-4/6 rounded-xl p-5 shadow-md bg-white">
             <app-graph-component/>
         </div>
-        <div class="basis-2/6 p-5 rounded-xl shadow-md bg-pink-500">
-            b
+        <div class="basis-2/6 p-5 rounded-xl shadow-md bg-white">
+            Filter
         </div>
     </div>
     
