--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -9,20 +9,20 @@
 <div class="flex flex-row h-[32rem]">
     <div class="p-0 flex flex-col justify-between aside basis-1/7 ms-8 rounded-xl bg-white shadow-md">
         <ul class="mt-5 flex flex-col">
-            <a href="#" class="px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
+            <a [routerLink]="['/dashboard']" routerLinkActive="bg-zinc-100"  class="px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
                 <li class="flex items-center">
                     <i class="fa-regular fa-house me-3"></i>
                     <span>Dashboard</span>
                 </li>
             </a>
 
-            <a href="#" class=" px-3 py-2 bg-zinc-100 hover:bg-zinc-50 w-[100%] inline-block">
+            <a [routerLink]="['/stats']" routerLinkActive="bg-zinc-100"  class="px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
                 <li class="flex items-center">
                     <i class="fa-solid fa-chart-line me-3"></i>
                     <span>Statistics</span>
                 </li>
             </a>
-            <a href="#" class=" px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
+            <a [routerLink]="['/transactions']" routerLinkActive="bg-zinc-100"  class=" px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
                 <li class="flex items-center">
                     <i class="fa-regular fa-chart-bar me-3"></i>
                     <span>Transaction</span>
