--- a/frontend/src/app/components/stats-component/stats-component.html
+++ b/frontend/src/app/components/stats-component/stats-component.html
@@ -4,12 +4,23 @@
             <app-graph-component/>
         </div>
         <div class="basis-2/6 p-5 rounded-xl shadow-md bg-white">
-            Filter
+            <h2 class="font-bold mb-2">Filter</h2>
+            <h3 class="mb-2 text-sm font-normal">Time...</h3>
+            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">Annual</a>
+            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">Monthly</a>
+            <a href="#" class="rounded-3xl bg-zinc-200 p-2 text-xs me-2 hover:bg-blue-500 hover:text-white duration-500 ease-in-out">Daily</a>
+            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">All</a>
+
+            <h3 class="mt-5 mb-2 text-sm font-normal">Variables</h3>
+            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">Solde</a>
+            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">Expense</a>
+            <a href="#" class="rounded-3xl bg-zinc-200 p-2 text-xs me-2 hover:bg-blue-500 hover:text-white duration-500 ease-in-out">Economie</a>
+            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">All</a>
         </div>
     </div>
     
     <div class="rounded-xl h-[50%] bg-white shadow-md p-5 bg-blue-500">
-        <h2 class="font-bold mb-2">Add a new transaction</h2>
+        <h2 class="font-bold mb-2">All transactions</h2>
 
         <div class="overflow-y-scroll bg-blue-50 p-2 h-[170px] rounded">
             <table class="w-[100%]">
