--- a/frontend/src/app/components/stats-component/stats-component.html
+++ b/frontend/src/app/components/stats-component/stats-component.html
@@ -9,13 +9,13 @@
             <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">Annual</a>
             <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">Monthly</a>
             <a href="#" class="rounded-3xl bg-zinc-200 p-2 text-xs me-2 hover:bg-blue-500 hover:text-white duration-500 ease-in-out">Daily</a>
-            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">All</a>
+            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">All</a>
 
             <h3 class="mt-5 mb-2 text-sm font-normal">Variables</h3>
-            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">Solde</a>
-            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">Expense</a>
+            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">Solde</a>
+            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2 ">Expense</a>
             <a href="#" class="rounded-3xl bg-zinc-200 p-2 text-xs me-2 hover:bg-blue-500 hover:text-white duration-500 ease-in-out">Economie</a>
-            <a href="#" class="rounded-3xl bg-blue-500 text-white p-2 text-xs me-2">All</a>
+            <a href="#" class="rounded-3xl bg-zinc-200 hover:bg-blue-500 hover:text-white p-2 text-xs me-2 duration-300 ease-in-out">All</a>
         </div>
     </div>
     
