--- a/frontend/src/app/components/stats-component/stats-component.html
+++ b/frontend/src/app/components/stats-component/stats-component.html
@@ -23,97 +23,7 @@
         <h2 class="font-bold mb-2">All transactions</h2>
 
         <div class="overflow-y-scroll bg-blue-50 p-2 h-[170px] rounded">
-            <table class="w-[100%]">
-                <thead class="text-xs text-zinc-700 border-b-1 border-zinc-300 p-2">
-                    <th class="font-light py-2">
-                        Amount
-                    </th>
-            
-                    <th class="font-light">
-                        Reason
-                    </th>
-            
-                    <th class="font-light">
-                        Date
-                    </th>
-    
-                    <th class="font-light">
-                        Status
-                    </th>
-                </thead>
-            
-                <tbody class="overflow-y-scroll">
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="flex items-center py-2"><small class="w-[50px] text-white inline-block px-3 text-xs bg-green-700 rounded-3xl text-center">In</small></td>
-                    </tr>
-            
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white vertical-center inline-block px-3 text-xs bg-red-700 rounded-3xl text-center">Out</small></td>
-                    </tr>
-            
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white vertical-center inline-block px-3 text-xs bg-red-700 rounded-3xl text-center">Out</small></td>
-                    </tr>
-    
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white inline-block px-3 text-xs bg-green-700 rounded-3xl text-center">In</small></td>
-                    </tr>
-    
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white inline-block px-3 text-xs bg-green-700 rounded-3xl text-center">In</small></td>
-                    </tr>
-    
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white inline-block px-3 text-xs bg-green-700 rounded-3xl text-center">In</small></td>
-                    </tr>
-    
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white vertical-center inline-block px-3 text-xs bg-red-700 rounded-3xl text-center">Out</small></td>
-                    </tr>
-    
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white vertical-center inline-block px-3 text-xs bg-red-700 rounded-3xl text-center">Out</small></td>
-                    </tr>
-            
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white vertical-center inline-block px-3 text-xs bg-red-700 rounded-3xl text-center">Out</small></td>
-                    </tr>
-            
-                    <tr class="border-zinc-300 text-xs border-b-1">
-                        <td class="p-2">Ar 10000</td>
-                        <td>Salary</td>
-                        <td>12-01-2025</td>
-                        <td class="" ><small class="w-[50px] text-white vertical-center inline-block px-3 text-xs bg-red-700 rounded-3xl text-center">Out</small></td>
-                    </tr>
-                </tbody>
-            </table>
+            <app-transaction-item-component [transactions]="allTransactions"/>
         </div>
     </div>
 </div>
