--- a/frontend/src/app/components/card-med-component/card-med-component.html
+++ b/frontend/src/app/components/card-med-component/card-med-component.html
@@ -1,3 +1,3 @@
 <div class="flex flex-col overflow-hidden">
-    <app-transaction-item-component/>
+    <app-transaction-item-component [transactions]="transactionInput()"/>
 </div>
