--- a/frontend/src/app/components/transaction-component/transaction-component.html
+++ b/frontend/src/app/components/transaction-component/transaction-component.html
@@ -1,7 +1,11 @@
 <div class="rounded-xl h-[100%] bg-white shadow-md p-5 bg-blue-500">
     <h2 class="font-bold mb-2">All transactions</h2>
+    <app-status-filter 
+        [transactions]="transactions"
+        (filteredTransactions)="onFilteredTransactions($event)"
+    />
 
-    <div class="overflow-y-auto h-[93%] bg-blue-50 p-2 rounded">
-        <app-transaction-item-component [transactions]="allTransactions"/>
+    <div class="overflow-y-auto h-[86%] bg-blue-50 pt-0 rounded">
+        <app-transaction-item-component [transactions]="filteredTransactions"/>
     </div>
 </div>
