--- a/frontend/src/app/components/transaction-item-component/transaction-item-component.scss
+++ b/frontend/src/app/components/transaction-item-component/transaction-item-component.scss
@@ -1,8 +1,11 @@
 table {
+    thead {
+        position: sticky;
+        top: 0;
+        left: 0;
+        backdrop-filter: blur(3px);
+    }
     th {
         text-align: left;
-    }
-
-    tr {
     }
 }
