--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -18,7 +18,9 @@
             <h2 class="font-bold mb-2">Add a new transaction</h2>
             <p class="text-sm">Did you earn or spent money today ?</p>
             <p class="text-sm">Here you can add you latest transaction to help you manage it.</p>
-            <button class="mt-2 rounded-[2em] px-4 py-1 bg-blue-500 text-white hover:bg-blue-700 transition duration-700 ease-in-out">Add...</button>
+            <button class="mt-2 rounded-[2em] px-4 py-1 bg-blue-500 text-white hover:bg-blue-700 transition duration-700 ease-in-out"
+                (click)="openModal()"
+            >Add...</button>
         </div>
     </div>
     <div class="content-2 aspect-1/2 flex flex-col">
@@ -32,10 +34,75 @@
         </div>
         <div class="content basis-6/7 py-2 px-5 shadow-md rounded-xl overflow-hidden">
             <h2 class="font-bold mb-2">Transaction History</h2>
-            <div class="my-card overflow-y-auto px-2 rounded bg-blue-50">
-                <app-card-med-component [transactionInput]="allTransactions"/>
+
+            <app-status-filter 
+                [transactions]="transactions"
+                (filteredTransactions)="onFilteredTransactions($event)"
+            />
+
+            <div class="my-card overflow-y-auto rounded bg-blue-50">
+                <app-transaction-item-component [transactions]="filteredTransactions"/>
             </div>
-            <button class="mt-2 rounded-[2em] px-4 py-1 border-1 border-blue-500 text-blue-500 hover:text-white hover:bg-blue-500 transition duration-500 ease-in-out">See all...</button>
+            
+            <a [routerLink]="['/transactions']" class="inline-block mt-2 rounded-[2em] px-4 py-1 border-1 border-blue-500 text-blue-500 hover:text-white hover:bg-blue-500 transition duration-500 ease-in-out">See all...</a>
         </div>
     </div>
+</div>
+<!-- Modal -->
+<div 
+  *ngIf="isModalOpen" 
+  class="fixed inset-0 flex items-center justify-center bg-black/50 z-50"
+>
+  <div class="relative bg-white rounded-xl shadow-lg w-[90%] md:w-[400px] p-6">
+    
+    <!-- Bouton X -->
+    <button 
+      type="button"
+      (click)="closeModal()"
+      class="absolute top-3 right-3 text-gray-500 hover:text-gray-800"
+    >
+    <i class="fa-solid fa-xmark"></i>
+    </button>
+
+    <h2 class="text-lg font-bold mb-4">Add New Transaction</h2>
+
+    <!-- Formulaire -->
+    <form (ngSubmit)="submitForm()">
+      <div class="mb-3">
+        <label class="block text-sm mb-1 font-medium">Amount</label>
+        <input 
+          type="number" 
+          name="amount"
+          required
+          class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
+        />
+      </div>
+
+      <div class="mb-3">
+        <label class="block text-sm mb-1 font-medium">Reason</label>
+        <input 
+          type="text" 
+          name="reason"
+          required
+          class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
+        />
+      </div>
+
+      <div class="flex justify-end gap-2 mt-4">
+        <button 
+          type="button"
+          class="px-4 py-2 rounded-lg bg-gray-300 hover:bg-gray-400 transition"
+          (click)="closeModal()"
+        >
+          Cancel
+        </button>
+        <button 
+          type="submit"
+          class="px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-blue-700 transition"
+        >
+          Save
+        </button>
+      </div>
+    </form>
+  </div>
 </div>
