update: add filter

--- a/frontend/src/app/components/stats-component/stats-component.html
+++ b/frontend/src/app/components/stats-component/stats-component.html
@@ -1,7 +1,7 @@
 <div class="flex flex-col h-[32rem] gap-3">
     <div class="flex h-[50%] gap-3">
         <div class="basis-4/6 rounded-xl p-5 shadow-md bg-white">
-            <app-graph-component/>
+            <app-graph-component [myData]="realData"/>
         </div>
         <div class="basis-2/6 p-5 rounded-xl shadow-md bg-white">
             <h2 class="font-bold mb-2">Filter</h2>
