--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -34,7 +34,7 @@
         <div class="px-3 py-2 items-center flex flex-row">
             <div style="width: 30px; height: 30px; border-radius: 50%;" class="profile bg-blue-500 me-3"></div>
             <a class="hover:bg-zinc-50" href="#">
-                <span class="block">{{ user.username }}</span>
+                <span class="block">{{ user.username | titlecase }}</span>
             </a>
         </div>
     </div>
