--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -17,14 +17,12 @@
         <div class="py-2 px-5 content basis-2/7 rounded-xl shadow-md">
             <h2 class="font-bold mb-2">Add a new transaction</h2>
             <p class="text-sm">Did you earn or spent money today ?</p>
-            <p class="text-sm">Here you can add you latest transaction to help you manage it.</p>
-            <button class="mt-2 me-3 rounded-[2em] px-4 py-1 bg-blue-500 text-white hover:bg-blue-700 transition duration-700 ease-in-out"
-                (click)="openModal(true)"
-            >Income</button>
-
-            <button class="mt-2 rounded-[2em] px-4 py-1 bg-red-700 text-white hover:bg-red-900 transition duration-700 ease-in-out"
-                (click)="openModal(false)"
-            >Outcome</button>
+            <p class="text-sm mb-3">Here you can add you latest transaction to help you manage it.</p>
+            
+            <app-new-transaction
+                (isSubmit)="onSubmit($event)"
+            />
+            
         </div>
     </div>
     <div class="content-2 aspect-1/2 flex flex-col">
@@ -46,72 +44,12 @@
 
             <div class="my-card overflow-y-auto rounded bg-blue-50">
                 <app-transaction-item-component 
-                (transactionIdToDelete)="onDeleteTransaction($event)"
-                [transactions]="filteredTransactions"
+                    (transactionIdToDelete)="onDeleteTransaction($event)"
+                    [transactions]="filteredTransactions"
                 />
             </div>
             
             <a [routerLink]="['/transactions']" class="inline-block mt-2 rounded-[2em] px-4 py-1 border-1 border-blue-500 text-blue-500 hover:text-white hover:bg-blue-500 transition duration-500 ease-in-out">See all...</a>
         </div>
     </div>
-</div>
-<!-- Modal -->
-<div 
-  *ngIf="isModalOpen" 
-  class="fixed inset-0 flex items-center justify-center bg-black/50 z-50"
->
-  <div class="relative bg-white rounded-xl shadow-lg w-[90%] md:w-[400px] p-6">
-    
-    <!-- Bouton X -->
-    <button 
-      type="button"
-      (click)="closeModal()"
-      class="absolute top-3 right-3 text-gray-500 hover:text-gray-800"
-    >
-    <i class="fa-solid fa-xmark"></i>
-    </button>
-
-    @if(is_in) {
-      <div class="flex gap-2 mb-3 items-center">
-        <i class="fa-solid text-xl fa-money-bill-trend-up text-green-500"></i>
-        <h2 class="text-lg font-bold">Income</h2>
-      </div>
-    } @else {
-      <div class="flex gap-2 mb-3 items-center">
-        <i class="fa-solid fa-money-bill-transfer text-red-500"></i>
-        <h2 class="text-lg font-bold">Outcome</h2>
-      </div>
-    }
-    <form [formGroup]="transactionForm" (ngSubmit)="submitForm()">
-
-        <div class="mb-3">
-          <label class="block text-sm mb-1 font-medium">Amount</label>
-          <input 
-            type="number" 
-            formControlName="amount"
-            class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
-          />
-        </div>
-      
-        <div class="mb-3">
-          <label class="block text-sm mb-1 font-medium">Reason</label>
-          <input 
-            type="text" 
-            formControlName="reason"
-            class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
-          />
-        </div>
-      
-        <div class="flex justify-end gap-2 mt-4">
-          <button type="button" class="px-4 py-2 rounded-lg bg-gray-300 hover:bg-gray-400 transition" (click)="closeModal()">
-            Cancel
-          </button>
-          <button type="submit" class="px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-blue-700 transition">
-            Save
-          </button>
-        </div>
-
-      </form>
-      
-  </div>
 </div>
