--- a/frontend/src/app/components/transaction-component/transaction-component.html
+++ b/frontend/src/app/components/transaction-component/transaction-component.html
@@ -1,11 +1,37 @@
-<div class="rounded-xl h-[100%] bg-white shadow-md p-5 bg-blue-500">
-    <h2 class="font-bold mb-2">All transactions</h2>
+<div class="rounded-xl h-[100%] bg-white shadow-md p-5 bg-blue-500 relative">
+    <div class="flex items-center gap-3 mb-2">
+        <h2 class="font-bold">All transactions</h2>
+    </div>
+
     <app-status-filter 
         [transactions]="transactions"
         (filteredTransactions)="onFilteredTransactions($event)"
     />
 
     <div class="overflow-y-auto h-[86%] bg-blue-50 pt-0 rounded">
-        <app-transaction-item-component [transactions]="filteredTransactions"/>
+        <app-transaction-item-component 
+            [transactions]="filteredTransactions"
+            (transactionIdToDelete)="onDeleteTransaction($event)"
+        />
     </div>
+
+    <!-- Bouton flottant -->
+    <div class="fixed bottom-12 right-10">
+        <button 
+            (click)="openNewTransactionModal()"
+            class="cursor-pointer flex items-center justify-center w-10 h-10 rounded-full bg-blue-600 text-white text-3xl shadow-lg 
+                   hover:scale-110 hover:bg-blue-700 transition-transform duration-300 ease-in-out"
+        >
+            <i class="fa-solid text-xl fa-plus"></i>
+        </button>
+    </div>
+
+    @if(isNewTransactionOpen) {
+        <!-- Ton composant modal de création -->
+        <app-new-transaction
+            class="fixed bottom-25 right-11"
+            [isTypeNormal]="false"
+            (isSubmit)="onSubmit()"
+        ></app-new-transaction>
+    }
 </div>
