--- a/frontend/src/app/components/new-transaction/new-transaction.html
+++ b/frontend/src/app/components/new-transaction/new-transaction.html
@@ -17,14 +17,14 @@
 } @else {
   <div class="other flex flex-col gap-1">
     <button
-      class="cursor-pointer hover:scale-110 flex justify-center items-center rounded-3xl w-8 p-2 h-8 bg-green-700 text-white hover:bg-green-600 transition duration-700 ease-in-out"
+      class="w-10 h-10 cursor-pointer hover:scale-110 flex justify-center items-center rounded-3xl w-8 p-2 h-8 bg-green-700 text-white hover:bg-green-600 transition duration-700 ease-in-out"
       (click)="openModal(true)"
     >
       <i class="fa-solid text-[.9em] text-white fa-money-bill-trend-up text-green-500"></i>
     </button>
   
     <button
-      class=" cursor-pointer hover:scale-110 flex justify-center items-center rounded-3xl w-8 p-2 h-8 bg-red-700 text-white hover:bg-red-600 transition duration-700 ease-in-out"
+      class="w-10 h-10 cursor-pointer hover:scale-110 flex justify-center items-center rounded-3xl w-8 p-2 h-8 bg-red-700 text-white hover:bg-red-600 transition duration-700 ease-in-out"
       (click)="openModal(false)"
     >
       <i class="fa-solid text-[.9em] fa-money-bill-transfer text-white"></i>
