pre final version

--- a/frontend/src/app/components/login/login.html
+++ b/frontend/src/app/components/login/login.html
@@ -52,6 +52,9 @@
     </div>
   
     <button class="bg-blue-500 rounded-xl p-3 mb-3 text-white">Sign in</button>
-    <p>Don't have an account ? <a class="text-blue-500" href="#">Sign up</a></p>
+    
+    <p>Don't have an account ? 
+      <a class="text-blue-500" [routerLink]="['/signup']">Sign up</a>
+    </p>
   </form>
   
